[gd_scene load_steps=8 format=1]

[ext_resource path="res://scripts/menu_game_over.gd" type="Script" id=1]
[ext_resource path="res://textures/ui/game_over_menu_bg.png" type="Texture" id=2]
[ext_resource path="res://textures/ui/btn_main_menu.png" type="Texture" id=3]
[ext_resource path="res://textures/black16x16.png" type="Texture" id=4]
[ext_resource path="res://fonts/slkscr.ttf" type="DynamicFontData" id=5]

[sub_resource type="Animation" id=1]

resource/name = "fade_to_black"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("texture_black:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="DynamicFont" id=2]

font/size = 30
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[node name="menu_game_over" type="Node"]

process/pause_mode = 2
script/script = ExtResource( 1 )

[node name="canvas" type="CanvasLayer" parent="."]

layer = 6
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="texture_bg" type="TextureFrame" parent="canvas"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1080.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="btn_menu_main" type="TextureButton" parent="canvas"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 51.0
margin/top = -124.0
margin/right = -49.0
margin/bottom = -162.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="texture_black" type="TextureFrame" parent="canvas"]

visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 640.0
margin/bottom = 480.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="anim" type="AnimationPlayer" parent="canvas"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/fade_to_black = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="label_score" type="Label" parent="canvas"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 836.0
margin/top = 597.0
margin/right = 1067.0
margin/bottom = 628.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0117188, 0.768372, 1, 1 )
text = "XXX"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label_score_top" type="Label" parent="canvas"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 836.0
margin/top = 556.0
margin/right = 1067.0
margin/bottom = 587.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0.679688, 1 )
text = "XXX"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


